[metadata]
name = Scientific Python Interactive Data Acoustic Modeling
version = 1.0.1
author = Shaun Callahan, David Schwartz, Diego Van Eggelpoel
author_email = scallahan2934@floridapoly.edu, dschwartz3219@floridapoly.edu, dvaneggelpoel2628@floridapoly.edu
description = Interactive Data Acoustic Modeling Tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/S0ggyBr3ad/FinalProject
license = MIT

[options]
packages = find:
install_requires =
    wave==0.0.2
    ffmpeg==1.4
    pydub==0.25.1
    matplotlib==3.8.0
    scipy==1.11.4
    numpy==1.26.0

[options.packages.find]
where = src